[pradeep]created pin components for notes

--- a/FundooWebApi/src/app/Components/icons/icons.component.html
+++ b/FundooWebApi/src/app/Components/icons/icons.component.html
@@ -1,6 +1,6 @@
-<div class="main" fxLayout="row" fxLayoutAlign="space-between center">
+<div class="mainicon" fxLayout="row" fxLayoutAlign="space-between center">
     
-<button mat-icon-button style="font-size: 5px;" >
+<button mat-icon-button  >
     <span class="material-icons">notification_important</span>  
 </button>
 
