[pradeep] intigrate pin notes and modifying display notes

--- a/FundooWebApi/src/app/Components/createnotes/createnotes.component.html
+++ b/FundooWebApi/src/app/Components/createnotes/createnotes.component.html
@@ -1,6 +1,6 @@
 
 <div class="container" >
-    <mat-card  class="matcard" *ngIf="!open" (click)="onopen()">
+    <mat-card  class="matcard" *ngIf="!open" (click)="onopen()" fxLayout="row">
         <input matInput class="searchBar" placeholder="Take a note..">
         <div id="pindiv">
         </div>
