--- a/FundooWebApi/src/app/Components/icons/icons.component.scss
+++ b/FundooWebApi/src/app/Components/icons/icons.component.scss
@@ -1,12 +1,9 @@
 .mainicon{
     display: flex;
      justify-content: space-around;
-    align-items:center;
+   // align-items:center;
 }
 .material-icons:hover {
     border: none;
     background-color: white;
-}
-.material-icons{
-    //font-size: 5px;
 }
