--- a/FundooWebApi/src/app/Components/createnotes/createnotes.component.scss
+++ b/FundooWebApi/src/app/Components/createnotes/createnotes.component.scss
@@ -20,7 +20,7 @@
 .matcard{
     display: flex;
     justify-content: center;
-    width: 35%;
+    width: 45%;
     border-radius: 1em;
     height: 4%;
 }
@@ -36,7 +36,7 @@
 .matcard1{
     display: block;
     justify-content: center;
-    width: 35%;
+    width:  40%;
     border-radius: 1em;
     height: 10em;
     
@@ -76,7 +76,7 @@ icon{
     flex-direction: row;
     justify-content: space-between;
     display: flex;
-    
+//background-color: red;
 }
 button{
      //background-color:whitesmoke;
