--- a/FundooWebApi/src/app/Components/icons/icons.component.scss
+++ b/FundooWebApi/src/app/Components/icons/icons.component.scss
@@ -1,7 +1,8 @@
 .mainicon{
     display: flex;
      justify-content: space-around;
-   // align-items:center;
+    align-items:center;
+    border: rebeccapurple;
 }
 .material-icons:hover {
     border: none;
