--- a/FundooWebApi/src/app/Components/displaynotes/displaynotes.component.html
+++ b/FundooWebApi/src/app/Components/displaynotes/displaynotes.component.html
@@ -1,43 +1,24 @@
 <div style="padding-left: 100px;font-family: fantasy;color: darkgray;">Pinnotes</div>
 <div style="flex-wrap: wrap;">
-<div class="maindiv" >
-    <div class="allnotes"   style="flex-direction: row;  display: flex; margin-left: 15%;">
-        <mat-card class="getnote" >
+    <div class="getAllNotes" *ngFor="let note of pinnotes">
+        <mat-card class="getNotesMat" >
             <div class="matdiv">
-                <mat-card-title >  {{note.title}}</mat-card-title>
-                    <mat-card-content >
-                        {{note.description}}
-                    </mat-card-content>
-                    <div class="icon">
-                       
-                    </div>
+                <mat-card-title >  {{note.title}}</mat-card-title><br>
+                    <mat-card-content > {{note.description}} </mat-card-content>
             </div>
-
         </mat-card>
     </div>
-
 </div>
 
 <div style="padding-left: 100px;font-family: fantasy;color: darkgray;">others</div>
-
 <div style="flex-wrap: wrap;">
-
     <div class="getAllNotes"  *ngFor="let note of notes" >
-
         <mat-card class="getNotesMat">
-
-            <mat-card-title>{{note.title}}
-            </mat-card-title>
-                    
-                    <br>
-
-                    {{note.description}}
-
-         
-
+            <div class="matdiv">
+            <mat-card-title>{{note.title}}</mat-card-title> <br>
+            <mat-card-content > {{note.description}} </mat-card-content> 
+            </div>
         </mat-card>
-
     </div>
-
 </div>
 
