[pradeep] modifying displaying notes

--- a/FundooWebApi/src/app/Components/createnotes/createnotes.component.html
+++ b/FundooWebApi/src/app/Components/createnotes/createnotes.component.html
@@ -11,8 +11,10 @@
             <div class="icondiv" >
                 <div (click)="open=!open">
                     <app-icons ></app-icons>
-                    <button mat-icon-button (click) ="onSubmit()" >Close</button>
                 </div>
+            </div>
+            <div class="close">
+                    <button mat-icon-button (click) ="onSubmit()" class="close" >Close</button> 
             </div>
     </mat-card>
 </div>
