--- a/FundooWebApi/src/app/Components/createnotes/createnotes.component.scss
+++ b/FundooWebApi/src/app/Components/createnotes/createnotes.component.scss
@@ -2,9 +2,8 @@
     display: flex;
     justify-content: center;
     width: 100%;
-    height: 80%;
-    margin-top: 5%;
-    margin-bottom: 4%;
+    height: 40%;
+    
    
 }
 .searchBar
@@ -22,13 +21,14 @@
     justify-content: center;
     width: 40%;
     border-radius: 1em;
-    height: 4%;
+    height: 5%;
 }
 .icondiv{
+    margin-top: 5%;
     display: flex;
-    justify-content: center;
-    height: 100%;
-    width: 30%;
+   // justify-content: center;
+   
+    width: 50%;
     border-radius: 1em;
     height: 4%;
     
@@ -38,7 +38,7 @@
     justify-content: center;
     width:  35%;
     border-radius: 1em;
-    height: 10em;
+    height: 80%;
     
 } 
 textarea{
