--- a/FundooWebApi/src/app/Components/displaynotes/displaynotes.component.scss
+++ b/FundooWebApi/src/app/Components/displaynotes/displaynotes.component.scss
@@ -10,8 +10,7 @@
 .getAllNotes {
   display: flex;
   flex-wrap: wrap;
- 
-  flex-direction: row;  
+  flex-direction: column;  
   display: flex; 
   margin-left: 15%;
 }
@@ -25,10 +24,10 @@
   align-items: center;
   display: block;
 }
-.others{font-family: fantasy;color: darkgray;
- 
+.others{
+  font-family: fantasy;
+  color: darkgray;
   flex-wrap: wrap;
- 
   flex-direction: row;  
   display: flex; 
   margin-left: 15%;
