[pradeep] inigration for archieve notes

--- a/FundooWebApi/src/app/Components/archieve/archieve.component.html
+++ b/FundooWebApi/src/app/Components/archieve/archieve.component.html
@@ -1,1 +1,34 @@
-<p>archieve works!</p>
+
+<div style="flex-wrap: wrap;">
+
+    <mat-card class="getNotesMat" 
+
+          *ngFor="let note of archievednotes" >
+
+        <div>
+
+            <div class="archievednotes">
+
+                <!-- <app-pin-notes [note]="note" (click)="onClickNoteId(note.id)"></app-pin-notes> -->
+
+            </div>
+
+            <mat-card-title>
+
+                {{note.title}}
+
+            </mat-card-title>
+
+                <br>
+            <mat-card-content>
+                {{note.description}}
+
+      
+            </mat-card-content> 
+        </div>
+
+        <app-icons></app-icons>
+
+    </mat-card>
+
+</div>
