--- a/FundooWebApi/src/app/Components/displaynotes/displaynotes.component.html
+++ b/FundooWebApi/src/app/Components/displaynotes/displaynotes.component.html
@@ -2,7 +2,7 @@
 
 <!-- <div style="flex-wrap: wrap;">
     <div class="others"  *ngIf="!trash && !archieve">Pinnotes</div>
-    <div class="getAllNotes" *ngFor="let note of pinnotes">
+    <div class="getAllNotes"  fxLayout="{{view}}" fxFlexOffset="15" *ngFor="let note of pinnotes">
         <mat-label style="font-family: fantasy;color: darkgray; position: absolute;">Pinnotes</mat-label>
         <mat-card class="getNotesMat" >
             <div class="matdiv">
