--- a/FundooWebApi/src/app/Components/notes/notes.component.html
+++ b/FundooWebApi/src/app/Components/notes/notes.component.html
@@ -1,3 +1,3 @@
-
-<app-createnotes></app-createnotes>
+<div *ngIf="trash">
+<app-createnotes></app-createnotes></div>
 <app-displaynotes></app-displaynotes>
