--- a/FundooWebApi/src/app/Components/createnotes/createnotes.component.scss
+++ b/FundooWebApi/src/app/Components/createnotes/createnotes.component.scss
@@ -2,8 +2,8 @@
     display: flex;
     justify-content: center;
     width: 100%;
-    height: 40%;
-    
+    height: 50%;
+    margin-top: 5%;
    
 }
 .searchBar
@@ -19,7 +19,7 @@
 .matcard{
     display: flex;
     justify-content: center;
-    width: 40%;
+    width: 35%;
     border-radius: 1em;
     height: 5%;
 }
@@ -34,16 +34,19 @@
     
 }
 .matcard1{
-    display: block;
+    display: flex;
     justify-content: center;
+    float: center;
     width:  35%;
     border-radius: 1em;
-    height: 80%;
+    height: 70%;
+    border-color: black;
     
 } 
 textarea{
     border: none;
     height: 1.2em;
+    width: 80%;
     margin-bottom: 0px;
     padding: 16px;
     font-weight: bolder;
