--- a/FundooWebApi/src/app/Components/icons/icons.component.html
+++ b/FundooWebApi/src/app/Components/icons/icons.component.html
@@ -16,7 +16,7 @@
     <span class="material-icons">insert_photo</span>
 </button>
 
-<button mat-icon-button (click)='archieveNote()>
+<button mat-icon-button >
      <span class="material-icons">archive</span>
 </button>
 </div>
