--- a/FundooWebApi/src/app/Components/createnotes/createnotes.component.scss
+++ b/FundooWebApi/src/app/Components/createnotes/createnotes.component.scss
@@ -3,7 +3,7 @@
     justify-content: center;
     width: 100%;
     height: 50%;
-    margin-top: 5%;
+    margin-top: 4%;
    
 }
 .searchBar
@@ -19,14 +19,14 @@
 .matcard{
     display: flex;
     justify-content: center;
-    width: 35%;
+    width: 40%;
     border-radius: 1em;
     height: 5%;
 }
 .icondiv{
-    margin-top: 5%;
+    margin-top: 30%;
     display: flex;
-   // justify-content: center;
+   //justify-content: center;
    
     width: 50%;
     border-radius: 1em;
@@ -40,7 +40,7 @@
     width:  35%;
     border-radius: 1em;
     height: 70%;
-    border-color: black;
+    //border-color: black;
     
 } 
 textarea{
