--- a/FundooWebApi/src/app/Components/icons/icons.component.html
+++ b/FundooWebApi/src/app/Components/icons/icons.component.html
@@ -12,7 +12,7 @@
 <button mat-icon-button>
     <span class="material-icons">color_lens</span>        
 </button>
-
+</div>
 <mat-menu #colorlist="matMenu" [overlapTrigger]="false">
     <ng-template matMenuContent>
         <div>
