--- a/FundooWebApi/src/app/Components/dashboard/dashboard.component.html
+++ b/FundooWebApi/src/app/Components/dashboard/dashboard.component.html
@@ -8,15 +8,17 @@
         <img class="image" src="assets/images/keep-512.png" alt="Keep">
         <span><mat-label style="font-family: sans-serif; padding-left: 5px;">Keep</mat-label>
         </span>
+        
         <div class="search">
         <button mat-icon-button class="search-icon">
           <mat-icon>search</mat-icon>
         </button>
-        <input class="searchInput" placeholder="Search" >
+        <input class="searchInput" placeholder="Search"  [(ngModel)]="title" (input)="searchNote()">
         <button mat-icon-button class="cancel">
           <mat-icon>clear</mat-icon>
         </button>
       </div>
+      
       <div class="rightside">
         <button mat-icon-button class="refresh">
           <mat-icon>refresh</mat-icon>
