--- a/FundooWebApi/src/app/Components/dashboard/dashboard.component.html
+++ b/FundooWebApi/src/app/Components/dashboard/dashboard.component.html
@@ -13,7 +13,7 @@
         <button mat-icon-button class="search-icon">
           <mat-icon>search</mat-icon>
         </button>
-        <input class="searchInput" placeholder="Search"  [(ngModel)]="title" (input)="searchNote()">
+        <input class="searchInput" type="text" placeholder="Search"  [(ngModel)]="title" (input)="searchNote()">
         <button mat-icon-button class="cancel">
           <mat-icon>clear</mat-icon>
         </button>
