[pradeep] modifying edit note component

--- a/FundooWebApi/src/app/Components/updatenote/updatenote.component.html
+++ b/FundooWebApi/src/app/Components/updatenote/updatenote.component.html
@@ -1,12 +1,13 @@
 <div style="height: 13em; width: 100%; padding: 0px 0px;margin: 0px 0px;" mat-dialog-content fxLayout="column" fxFlex>
     <textarea id="title"  style="border: none;" matInput type="text" class="input sizeof" placeholder="Title"></textarea>
-    <textarea id="desc" style="border: none; " matInput type="text" class="input sizeof" placeholder="Take a note"></textarea>
+    <textarea id="desc" style="border: none; " matInput type="text" class="input sizeof" placeholder="Take a note" ></textarea>
     <div class="lastEdit">
         <span></span>
     </div>
     <div class="icon" mat-dialog-actions>
         <app-icons class="app-note-list sizeof"></app-icons>
-        <div class="div-button" ><button
-                style="border: none; padding-right: 45px;">Close</button></div>
+        <div class="div-button" button >
+            <button style="border: none; padding-right: 45px;">Close</button>
+        </div>
     </div>
 </div>
