[pradeep] modifying edit note component

--- a/FundooWebApi/src/app/Components/dashboard/dashboard.component.html
+++ b/FundooWebApi/src/app/Components/dashboard/dashboard.component.html
@@ -29,7 +29,7 @@
         <button mat-icon-button class="sttings">
           <mat-icon>settings</mat-icon>
         </button>
-        <button mat-icon-button class="apps" (click)="signout()">
+        <button mat-icon-button class="apps" >
           <mat-icon>apps</mat-icon>
         </button>
       </div>
