--- a/FundooWebApi/src/app/Components/updatenote/updatenote.component.scss
+++ b/FundooWebApi/src/app/Components/updatenote/updatenote.component.scss
@@ -99,6 +99,7 @@
     font-family: "Open Sans", sans-serif;
     font-weight: bold;
     outline: none;
+    padding-right: 45px;
   }
   button:active {
     background-color: gainsboro;
@@ -117,4 +118,10 @@
   
   sizeof{
       width: 100% auto;
+  }
+  .main{
+    height: 13em; 
+    width: 100%; 
+    padding: 0px 0px;
+    margin: 0px 0px;
   }
