[pradeep] modifying edit note component

--- a/FundooWebApi/src/app/Components/dashboard/dashboard.component.html
+++ b/FundooWebApi/src/app/Components/dashboard/dashboard.component.html
@@ -59,7 +59,7 @@
       <mat-divider></mat-divider>
       
       <diV class="labeldiv">
-        <mat-label class="labelmat">LABELS</mat-label>
+        <!-- <mat-label class="labelmat">LABELS</mat-label> -->
         <button *ngFor="let label of labels"  mat-button class="labelbutton">
          <div class="icondiv">
           <img src="../../../assets/images/label.png"  style="margin-right: 10%;">
