--- a/FundooWebApi/src/app/Components/updatenote/updatenote.component.scss
+++ b/FundooWebApi/src/app/Components/updatenote/updatenote.component.scss
@@ -99,7 +99,7 @@
     font-family: "Open Sans", sans-serif;
     font-weight: bold;
     outline: none;
-    padding-right: 45px;
+    border: none; padding-right: 45px;
   }
   button:active {
     background-color: gainsboro;
