--- a/FundooWebApi/src/app/Components/icons/icons.component.html
+++ b/FundooWebApi/src/app/Components/icons/icons.component.html
@@ -33,4 +33,15 @@
 <button mat-icon-button (click)='archiveButton()'>
      <span class="material-icons">archive</span>
 </button>
+
+<a><img mat-icon-button [matMenuTriggerFor]="menu" style="height: 1.5em; width: 2em;" src="../../../assets/images/more.svg" 
+    matTooltip="More"></a>
+
+<mat-menu #menu="matMenu">
+<button mat-menu-item >Delete Note</button>
+<!-- <button mat-menu-item>Add Label</button> -->
+<!-- <button mat-menu-item [matMenuTriggerFor]="vertebrates">Add Label</button> -->
+<button mat-menu-item  >Add Label</button>
+<button mat-menu-item>Add Drawing</button>
+</mat-menu>
 </div>
