[pradeep] modifying edit label

--- a/FundooWebApi/src/app/Components/editlabel/editlabel.component.html
+++ b/FundooWebApi/src/app/Components/editlabel/editlabel.component.html
@@ -4,23 +4,23 @@
             <input type="text" style="width: 280px; height: 30px;" placeholder="Create Label" >
         </div>
         <div>
-            <a><img id="img" style="height: 40px; width: 40px; padding-left: 10px;" src="assets/icon/icons8-add-64.png" matTooltip="Create Label"></a>
+            <a><img id="img" style="height: 40px; width: 40px; padding-left: 10px;" src="../../../assets/images/icons8-add-64.png" matTooltip="Create Label"></a>
         </div>
     </div>
     <div class="label-list">
         <div  style="display: flex; align-items: center; flex-direction: row;">
             <div style="display: flex; align-items: flex-start;" >
-                <img id="img" src="assets/icon/label-24px.svg" 
+                <img id="img" src="../../../assets/images/label-24px.svg" 
                     style="height: 30px;margin-left: 40px; width: 40px;">
             </div>
             <div style="display: flex; justify-items: flex-start;" >
-                <img id="img" class="img-style" src="assets/icon/delete.svg" style="height: 20px;margin-left: 40px; width: 20px;" matTooltip="Delete label">
+                <img id="img" class="img-style" src="../../../assets/images/delete.svg" style="height: 20px;margin-left: 40px; width: 20px;" matTooltip="Delete label">
             </div>
            
             <label mat-menu-item
                 style="display:inline; font-size: large; font-weight: bolder;"></label>
             <div class="img-edit">
-                <img  class="img-edit"  src="assets/icon/edit-24px.svg"
+                <img  class="img-edit"  src="../../../assets/images/edit-24px.svg" style="height: 20px;margin-left: 40px; width: 20px;" 
                     matTooltip="edit label">
             </div>
         </div>
