--- a/FundooWebApi/src/app/Components/dashboard/dashboard.component.html
+++ b/FundooWebApi/src/app/Components/dashboard/dashboard.component.html
@@ -63,18 +63,20 @@
       <mat-divider></mat-divider>
       
       <diV class="labeldiv">
+        <div *ngFor="let label of labels">
         <!-- <mat-label class="labelmat">LABELS</mat-label> -->
         <button *ngFor="let label of labels"  mat-button class="labelbutton">
-         <div class="icondiv">
-          <img src="../../../assets/images/label.png"  style="width: 10%; height: 10%; float: left;">
-          <span > {{label.name}}  </span> 
+          <a [routerLink]="['notes']" [queryParams]="{ page: 'labels' }"></a>
+         <div class="icondiv" style="text-decoration:none;">
+         <span> <img src="../../../assets/images/label.png"  style="height: 27px;padding-left: 30px; width: 30px;"  (click)="onCLickSetLabelId(label.labelId)"></span>
+         <span style=" padding-left: 30px; " (click)="onCLickSetLabelId(label.labelId)">{{label.name}}</span>
         </div>
-          
-        </button>
-
+      </a>
+        <!-- </button> -->
+      </diV>
         
 
-        <button mat-button class="labelbutton">
+        <button mat-button class="labelbutton" (click)="openDialog(labels)">
           <div class="icondiv">
             <mat-icon>edit</mat-icon>
           </div>
