--- a/FundooWebApi/src/app/Components/editlabel/editlabel.component.html
+++ b/FundooWebApi/src/app/Components/editlabel/editlabel.component.html
@@ -8,10 +8,9 @@
         </div>
     </div>
     <div class="label-list">
-        <div  style="display: flex; align-items: center; flex-direction: row;">
-            <div style="display: flex; align-items: flex-start;" >
-                <img id="img" src="../../../assets/images/label-24px.svg" 
-                    style="height: 30px;margin-left: 40px; width: 40px;">
+        <div *ngFor="let label of labels" style="display: flex; align-items: center; flex-direction: row;">
+            <div style="display: flex; align-items: flex-start;"  (mouseover)="changeText=true" (mouseout)="changeText=false">
+                <img id="img" src="../../../assets/images/label-24px.svg" style="height: 30px;margin-left: 40px; width: 40px;">
             </div>
             <div style="display: flex; justify-items: flex-start;" >
                 <img id="img" class="img-style" src="../../../assets/images/delete.svg" style="height: 20px;margin-left: 40px; width: 20px;" matTooltip="Delete label">
