--- a/FundooWebApi/src/app/Components/icons/icons.component.html
+++ b/FundooWebApi/src/app/Components/icons/icons.component.html
@@ -41,7 +41,7 @@
 <button mat-menu-item >Delete Note</button>
 <!-- <button mat-menu-item>Add Label</button> -->
 <!-- <button mat-menu-item [matMenuTriggerFor]="vertebrates">Add Label</button> -->
-<button mat-menu-item  >Add Label</button>
-<button mat-menu-item>Add Drawing</button>
+<button mat-menu-item (click)='openDialog(note)'>Add Label</button>
+<button mat-menu-item>Ad)d Drawing</button>
 </mat-menu>
 </div>
