--- a/FundooWebApi/src/app/Components/label/label.component.html
+++ b/FundooWebApi/src/app/Components/label/label.component.html
@@ -1,17 +1,18 @@
 <div>
     <div class="search-label">
         <div>
-        <input type="text" placeholder="Search"  >
+        <input type="text" placeholder="Search"  #labelInput   [(ngModel)]="labels.name" >
         </div>
         <div >
-           <a><img  style="height: 40px; width: 40px; padding-left: 10px;" src="../../../assets/images/icons8-add-64.png"  matTooltip="Create Label"></a>
+           <a><img  style="height: 40px; width: 40px; padding-left: 10px;" src="../../../assets/images/icons8-add-64.png"  
+             matTooltip="Create Label"></a>
         </div>
     </div>
     <div class="label-list">
         <div *ngFor="let label of labels">
             
             <!-- <label mat-menu-item style="display:inline" (click)="onCheckedAddLabel(label.labelId,label.noteId)">{{label.labelName}}</label> -->
-            <label mat-menu-item style="display:inline">{{label.name}}</label>
+            <label mat-menu-item style="display:inline"  (click)="onCheckedAddLabel(label.labelId,label.noteId)">{{label.name}}</label>
         </div>
     </div>
 </div>
